styles/components/utilities/search.scss
.block-search {
  z-index: 4;
  flex: auto;
  display: flex;
  justify-content: flex-end;

  .hot-key {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 1em;
    border-radius: $rounded-small;
    height: 2rem;
    cursor: pointer;
    flex: auto;
    max-width: 15rem;

    @media (max-width: 1024px) {
      width: 2rem;
      flex: 0 0 auto;
      padding: 0;

      .search-text,
      .command {
        display: none;
      }
    }

    p,
    i {
      margin: 0;
    }

    i {
      font-size: 1.25em;
      transform: rotateY(180deg);
    }
    .search-text {
      margin-right: 2em;
      margin-left: 0.5em;
      flex: auto;
    }

    &:hover {
      p,
      i {
        opacity: 0.7;
      }
    }
  }

  .algolia {
    position: fixed;
    height: 100vh;
    width: 100vw;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;

    .modalContainer {
      display: flex;
      align-items: center;
      justify-content: center;
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
      background: rgba($gray-60, 0.6);
    }

    .content {
      padding: 0;
      border-radius: $rounded-small;
      width: 36em;
      height: 40em;
      max-width: calc(100vw - 2em);
      overflow-x: hidden;
      overflow-y: auto;
      overflow-y: overlay;
      max-height: calc(100vh - 2em);

      .ais-SearchBox {
        position: sticky;
        top: 0;
        z-index: 1;
      }

      .ais-SearchBox-form {
        position: relative;

        input {
          height: 4em;
          width: 100%;
          background: transparent;
          border: none;
          border-bottom: 1px solid;
          border-radius: 0;
          padding: 0 1em;
          padding-left: 5em;
          font-size: 1em; // Get from parent rather than browser.
        }

        input:focus,
        input:focus-visible {
          outline: none;
          border-bottom: 2px solid $yellow-90 !important;
        }

        #search-clear,
        input[type="search" i]::-webkit-search-cancel-button {
          opacity: 0;
        }

        button {
          box-shadow: none;
          position: absolute;
          top: 50%;
          left: 1em;
          transform: translateY(-50%);
          background: transparent;
        }

        .ais-SearchBox-reset {
          right: 1em;
          left: unset;

          &[hidden] {
            display: none;
          }
        }
      }

      .ais-Snippet {
        font-style: normal;
        opacity: 0.8;
      }

      .ais-Hits {
        .ais-Hits-list {
          list-style: none;
          padding: 0;
          margin: 0;

          li {
            margin: 0;
            border-bottom: 1px solid;

            &:hover {
              background: $gray-20;
            }

            .item {
              margin: 0;
              padding: 1em;

              &.focused {
                background: $gray-20;
              }
              p,
              h5 {
                margin: 0;
              }
              em {
                font-style: normal;
                display: inline-block;
                border-bottom: 2px solid $yellow-90;
              }
              a {
                display: flex;
                gap: 1.5em;

                .image_container {
                  position: relative;
                  overflow: hidden;

                  display: flex;
                  align-content: center;
                  justify-content: center;

                  width: 40px;
                  height: 40px;
                  border-radius: $rounded-small;

                  > div {
                    > i {
                      line-height: 40px;
                      color: $white;
                    }
                  }
                }
                .copy {
                  width: calc(100% - 7em);

                  span {
                  }
                  h2 {
                  }
                }
              }
            }
          }
        }
      }
    }
  }

  .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
    opacity: 0;
    .content,
    button {
      transform: scale(0.85);
    }
  }
}

